# pyclutter

./: AUTHORS  ChangeLog  Makefile.am  Makefile.tmpl  NEWS  README  README.md  autogen.sh  configure.ac  pyclutter.doap
clutter/: Makefile.am  __init__.py  clutter-1.2-types.defs  clutter-1.2.defs  clutter-1.4-types.defs  clutter-1.4.defs  clutter-action.override  clutter-actor.override  clutter-animation.override  clutter-animator.override  clutter-base-types.defs  clutter-base.defs  clutter-behaviour.override  clutter-box.override  clutter-boxed.override  clutter-color.override  clutter-effect.override  clutter-event.override  clutter-layout-manager.override  clutter-model.override  clutter-script.override  clutter.override  cluttermodule.c  clutterx11-base.defs  clutterx11.override  cogl-base.defs  cogl-material.override  cogl-matrix.override  cogl-offscreen.override  cogl-shader.override  cogl-texture.override  cogl.override
codegen/: Makefile.am  h2def.py  reversewrapper.py
docs/: Makefile.am
examples/: Makefile.am  actor-model.py  basic-actor.py  canvas.py  clutter-gtk-style.py  constraints.py  custom-layout-manager.py  image-content.py  layout-manager.py  rounded-rectangle.py  script.py  scroll-actor.py  test-bin-layout.py  test-box-layout.py  test-flow-layout.py  test-shader.py
gi/: Makefile.am
gi/overrides/: Clutter.py  Makefile.am
introspection/: Clutter.py  Makefile.am
tests/: Makefile.am  run-tests.py  test_overrides_Color.py
